--- a/index.html
+++ b/index.html
@@ -115,19 +115,19 @@
             <br /><hr /><br />
             <div class="code core-grid" data-xrayhtml>
                 <div class="row">
-                    <div class="col-6-sm"><div class="grid-box">.col-6-sm</div></div>
-                    <div class="col-6-sm"><div class="grid-box">.col-6-sm</div></div>
+                    <div class="col-6-sm"><p>.col-6-sm</p></div>
+                    <div class="col-6-sm"><p>.col-6-sm</p></div>
                 </div>
                 <div class="row">
-                    <div class="col-4-md"><div class="grid-box">.col-4-md</div></div>
-                    <div class="col-4-md"><div class="grid-box">.col-4-md</div></div>
-                    <div class="col-4-md"><div class="grid-box">.col-4-md</div></div>
+                    <div class="col-4-md"><p>.col-4-md</p></div>
+                    <div class="col-4-md"><p>.col-4-md</p></div>
+                    <div class="col-4-md"><p>.col-4-md</p></div>
                 </div>
                 <div class="row">
-                    <div class="col-3-lg"><div class="grid-box">.col-3-lg</div></div>
-                    <div class="col-3-lg"><div class="grid-box">.col-3-lg</div></div>
-                    <div class="col-3-lg"><div class="grid-box">.col-3-lg</div></div>
-                    <div class="col-3-lg"><div class="grid-box">.col-3-lg</div></div>
+                    <div class="col-3-lg"><p>.col-3-lg</p></div>
+                    <div class="col-3-lg"><p>.col-3-lg</p></div>
+                    <div class="col-3-lg"><p>.col-3-lg</p></div>
+                    <div class="col-3-lg"><p>.col-3-lg</p></div>
                 </div>
             </div>
         </section>
@@ -145,10 +145,10 @@
             </div>
             <div class="code core-grid" data-xrayhtml>
                 <div class="row">
-                    <div class="col-6-sm col-3-lg"><div class="grid-box">.col-6-sm .col-3-lg</div></div>
-                    <div class="col-6-sm col-3-lg"><div class="grid-box">.col-6-sm .col-3-lg</div></div>
-                    <div class="col-6-sm col-3-lg"><div class="grid-box">.col-6-sm .col-3-lg</div></div>
-                    <div class="col-6-sm col-3-lg"><div class="grid-box">.col-6-sm .col-3-lg</div></div>
+                    <div class="col-6-sm col-3-lg"><p>.col-6-sm .col-3-lg</p></div>
+                    <div class="col-6-sm col-3-lg"><p>.col-6-sm .col-3-lg</p></div>
+                    <div class="col-6-sm col-3-lg"><p>.col-6-sm .col-3-lg</p></div>
+                    <div class="col-6-sm col-3-lg"><p>.col-6-sm .col-3-lg</p></div>
                 </div>
             </div>
         </section>
@@ -163,10 +163,10 @@
                     </p>
                 </div>
             </div>
-            <section class="page-class">
+            <section class="page-class core-grid">
                 <div class="row">
-                    <div class="col-6-c"><div class="grid-box">.col-6-c</div></div>
-                    <div class="col-6-c"><div class="grid-box">.col-6-c</div></div>
+                    <div class="col-6-c"><p>.col-6-c</p></div>
+                    <div class="col-6-c"><p>.col-6-c</p></div>
                 </div>
             </section>
             <pre class="language-markup">
@@ -197,52 +197,52 @@
             </div>
             <section class="core-grid">
                 <div class="row">
-                    <div class="col-1"><div class="grid-box">.col-1</div></div>
-                    <div class="col-1"><div class="grid-box">.col-1</div></div>
-                    <div class="col-1"><div class="grid-box">.col-1</div></div>
-                    <div class="col-1"><div class="grid-box">.col-1</div></div>
-                    <div class="col-1"><div class="grid-box">.col-1</div></div>
-                    <div class="col-1"><div class="grid-box">.col-1</div></div>
-                    <div class="col-1"><div class="grid-box">.col-1</div></div>
-                    <div class="col-1"><div class="grid-box">.col-1</div></div>
-                    <div class="col-1"><div class="grid-box">.col-1</div></div>
-                    <div class="col-1"><div class="grid-box">.col-1</div></div>
-                    <div class="col-1"><div class="grid-box">.col-1</div></div>
-                    <div class="col-1"><div class="grid-box">.col-1</div></div>
+                    <div class="col-1"><p>.col-1</p></div>
+                    <div class="col-1"><p>.col-1</p></div>
+                    <div class="col-1"><p>.col-1</p></div>
+                    <div class="col-1"><p>.col-1</p></div>
+                    <div class="col-1"><p>.col-1</p></div>
+                    <div class="col-1"><p>.col-1</p></div>
+                    <div class="col-1"><p>.col-1</p></div>
+                    <div class="col-1"><p>.col-1</p></div>
+                    <div class="col-1"><p>.col-1</p></div>
+                    <div class="col-1"><p>.col-1</p></div>
+                    <div class="col-1"><p>.col-1</p></div>
+                    <div class="col-1"><p>.col-1</p></div>
                 </div>
                 <div class="row">
-                    <div class="col-2"><div class="grid-box">.col-2</div></div>
-                    <div class="col-2"><div class="grid-box">.col-2</div></div>
-                    <div class="col-2"><div class="grid-box">.col-2</div></div>
-                    <div class="col-2"><div class="grid-box">.col-2</div></div>
-                    <div class="col-2"><div class="grid-box">.col-2</div></div>
-                    <div class="col-2"><div class="grid-box">.col-2</div></div>
+                    <div class="col-2"><p>.col-2</p></div>
+                    <div class="col-2"><p>.col-2</p></div>
+                    <div class="col-2"><p>.col-2</p></div>
+                    <div class="col-2"><p>.col-2</p></div>
+                    <div class="col-2"><p>.col-2</p></div>
+                    <div class="col-2"><p>.col-2</p></div>
                 </div>
                 <div class="row">
-                    <div class="col-3"><div class="grid-box">.col-3</div></div>
-                    <div class="col-3"><div class="grid-box">.col-3</div></div>
-                    <div class="col-3"><div class="grid-box">.col-3</div></div>
-                    <div class="col-3"><div class="grid-box">.col-3</div></div>
+                    <div class="col-3"><p>.col-3</p></div>
+                    <div class="col-3"><p>.col-3</p></div>
+                    <div class="col-3"><p>.col-3</p></div>
+                    <div class="col-3"><p>.col-3</p></div>
                 </div>
                 <div class="row">
-                    <div class="col-4"><div class="grid-box">.col-4</div></div>
-                    <div class="col-4"><div class="grid-box">.col-4</div></div>
-                    <div class="col-4"><div class="grid-box">.col-4</div></div>
+                    <div class="col-4"><p>.col-4</p></div>
+                    <div class="col-4"><p>.col-4</p></div>
+                    <div class="col-4"><p>.col-4</p></div>
                 </div>
                 <div class="row">
-                    <div class="col-6"><div class="grid-box">.col-6</div></div>
-                    <div class="col-6"><div class="grid-box">.col-6</div></div>
+                    <div class="col-6"><p>.col-6</p></div>
+                    <div class="col-6"><p>.col-6</p></div>
                 </div>
                 <div class="row">
-                    <div class="col-12"><div class="grid-box">.col-12</div></div>
+                    <div class="col-12"><p>.col-12</p></div>
                 </div>
                 <div class="row">
-                    <div class="col-5"><div class="grid-box">.col-5</div></div>
-                    <div class="col-7"><div class="grid-box">.col-7</div></div>
+                    <div class="col-5"><p>.col-5</p></div>
+                    <div class="col-7"><p>.col-7</p></div>
                 </div>
                 <div class="row">
-                    <div class="col-8"><div class="grid-box">.col-8</div></div>
-                    <div class="col-4"><div class="grid-box">.col-4</div></div>
+                    <div class="col-8"><p>.col-8</p></div>
+                    <div class="col-4"><p>.col-4</p></div>
                 </div>
             </section>
         </section>
@@ -258,11 +258,11 @@
                 </div>
             </div>
             <section class="core-grid row">
-                <div class="col-8-contain"><div class="grid-box">.col-8-contain (max-width: 733.33333px)</div></div>
+                <div class="col-8-contain"><p>.col-8-contain (max-width: 733.33333px)</p></div>
                 <div class="clear-both"></div>
-                <div class="col-6-contain"><div class="grid-box">.col-6-contain (max-width: 550px)</div></div>
+                <div class="col-6-contain"><p>.col-6-contain (max-width: 550px)</p></div>
                 <div class="clear-both"></div>
-                <div class="col-4-contain"><div class="grid-box">.col-4-contain (max-width: 366.66667px)</div></div>
+                <div class="col-4-contain"><p>.col-4-contain (max-width: 366.66667px)</p></div>
             </section>
         </section>
         <section class="box">
