--- a/README.html
+++ b/README.html
@@ -1,4 +1,4 @@
-<h1>Core Grid 1.5.2</h1>
+﻿<h1>Core Grid 1.6.0</h1>
 
 <p>
   <a href="http://splintercode.github.io/CoreGrid">View Core Grid Documentation</a>
@@ -8,6 +8,7 @@
 <h2>Latest changes</h2>
 
 <ul>
+    <li>Version 1.6.0 - Minor Bug Fixes, Added new layout helper classes, added vertical alignment reset.</li>
     <li>Version 1.5.0 - Minor Bug Fixes, New Sass configuration, new UI/Documentation</li>
     <li>Version 1.1.4 - Sass refactor, add Containing (max-width) class helpers</li>
     <li>Version 1.1.1 - Minor Bug Fixes</li>
