Grid minor bug fix

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         Core Grid is a dynamic mobile first Sass/CSS grid. The grid is designed to have default break points for the majority
                         of content layouts and a secondary semantic grid for fined tuned control over layouts.
                     </p><br />
-                    <a href="https://github.com/splintercode/CoreGrid" class="btn">Download on GitHub</a>
+                    <a href="https://github.com/splintercode/CoreGrid" class="btn block-center">Download on GitHub</a>
                 </div>
             </div>
         </div>
