fixed ruby sass compile bug

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head>
     <title>Core Grid</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -21,7 +21,7 @@
         <div class="row">
             <div class="col-12-md">
                 <div class="box">
-                    <h2>Core Grid System (v1.6.0)</h2>
+                    <h2>Core Grid System (v1.7.0)</h2>
                     <p>
                         Core Grid is a dynamic mobile first Sass/CSS grid. The grid is designed to have default break points for the majority
                         of content layouts and a secondary semantic grid for fined tuned control over layouts.
@@ -460,7 +460,7 @@ table, fieldset, figure, pre, .header, img {
         </div>
     </main>
     <footer>
-        <a href="http://www.corycode.me" target="_blank">Cory Bateman www.corycode.me</a><br /><br />
+        <a href="http://corycode.me" target="_blank">Cory Bateman corycode.me</a><br /><br />
         <a href="https://github.com/splintercode/CoreGrid">Contribute on GitHub</a>
     </footer>
     <script src="Content/baseBundle.min.js"></script>
