Minor bug fix and version update

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Core Grid</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-    
+
     <!--[if gt IE 8]><!-->
     <link href="Src/coreGrid.css" rel="stylesheet" />
     <!--<![endif]-->
@@ -21,7 +21,7 @@
         <div class="row">
             <div class="col-12-md">
                 <div class="box">
-                    <h2>Core Grid System (v1.7.0)</h2>
+                    <h2>Core Grid System (v1.7.1)</h2>
                     <p>
                         Core Grid is a dynamic mobile first Sass/CSS grid. The grid is designed to have default break points for the majority
                         of content layouts and a secondary semantic grid for fined tuned control over layouts.
@@ -425,6 +425,9 @@
 }
 .float-right {
     float: right;
+}
+.full-width {
+    width: 100%;
 }
 .clear-both {
     clear: both;
