--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
     <!--[if gt IE 8]><!-->
-    <link href="Src/coreGrid.css" rel="stylesheet" />
+    <link href="src/coreGrid.css" rel="stylesheet" />
     <!--<![endif]-->
     <!--[if lte IE 8]>
         <link href="Src/oldIE.min.css" rel="stylesheet" />
     <![endif]-->
-    <link href="Content/baseBundle.min.css" rel="stylesheet" />
+    <link href="content/baseBundle.min.css" rel="stylesheet" />
 </head>
 <body id="CoreGridSystem">
     <header>
@@ -505,6 +505,6 @@ table, fieldset, figure, pre, .header, img {
         <a href="http://corycode.me" target="_blank">Cory Bateman corycode.me</a><br /><br />
         <a href="https://github.com/splintercode/CoreGrid">Contribute on GitHub</a>
     </footer>
-    <script src="Content/baseBundle.min.js"></script>
+    <script src="content/baseBundle.min.js"></script>
 </body>
 </html>
