Bug patch updates 1.10.1
Fix bug #12 related to row class overflow issue

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
     <!--[if gt IE 8]><!-->
-    <link href="src/coreGrid.css" rel="stylesheet" />
+    <link href="src/core-grid.min.css" rel="stylesheet" />
     <!--<![endif]-->
     <!--[if lte IE 8]>
-        <link href="Src/oldIE.min.css" rel="stylesheet" />
+        <link href="src/old-ie.min.css" rel="stylesheet" />
     <![endif]-->
-    <link href="content/baseBundle.min.css" rel="stylesheet" />
+    <link href="assets/baseBundle.min.css" rel="stylesheet" />
 </head>
 <body id="CoreGridSystem">
     <header>
@@ -21,7 +21,7 @@
         <div class="row">
             <div class="col-12-md">
                 <div class="card">
-                    <h2>Core Grid System v1.10.0</h2>
+                    <h2>Core Grid System v1.10.1</h2>
                     <p>
                         Core Grid is a dynamic mobile first Sass/CSS grid. Core grid uses traditional float based columns
                         to provide the best browser support. In addition helper classes for flexbox are included that can progressively enhance UI layouts.
@@ -502,9 +502,9 @@ table, fieldset, figure, pre, .header, img {
         </div>
     </main>
     <footer>
-        <a href="http://corycode.me" target="_blank">Cory Bateman corycode.me</a><br /><br />
+        <a href="http://coryrylan.com" target="_blank">Cory Rylan coryrylan.com</a><br /><br />
         <a href="https://github.com/splintercode/CoreGrid">Contribute on GitHub</a>
     </footer>
-    <script src="content/baseBundle.min.js"></script>
+    <script src="assets/baseBundle.min.js"></script>
 </body>
 </html>
